Fixed compilation after 688009 cherry-pick

The problem was caused by incorrect merge conflict resolution.

BUG=688009
NOTRY=true
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2698203004
Cr-Commit-Position: refs/branch-heads/2987@{#552}
Cr-Branched-From: ad51088c0e8776e8dcd963dbe752c4035ba6dab6-refs/heads/master@{#444943}